ステージ分割の仕組み作り

--- a/Readme.mkd
+++ b/Readme.mkd
@@ -2,14 +2,28 @@ OpenGLの解説用
 
 コンパイル方法
 
-Ubuntu:	`$ make`
-Windows: `$ make win`
+Ubuntu:	`$ make`  
+Windows: `$ make win`  
 
 実行
 
-Ubuntu: `$ ./a.out`
-Windows: `$ ./a.exe`
+Ubuntu: `$ ./a.out`  
+Windows: `$ ./a.exe`  
 
 実行ファイルやオブジェクトファイル（.o）などを消したい時
 
 	$ make clean
+	
+
+
+ステージクラスについて
+-----
+
+抽象クラスから派生させた子クラスは、抽象クラスの型で管理できる。
+メソッドの呼び出しも抽象クラスのを呼び出すように使える。
+というのを使って、ステージの切り替えができるようにするために作ったクラスです。
+
+ステージごとにクラスを作るメリットは、他と独立して管理できること。
+デメリットは状態の引き継ぎなどを全く考えてないこと。
+
+
